# simacros

./: .hgignore  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.ac
cfg/: README  gendsp.pl.in  gendsp.sh.in
cfg/m4/: be.m4  boost_filesystem.m4  bux.m4  cash.m4  cgimage.m4  changesonly.m4  check_arcsdeapi.m4  check_bz2.m4  check_dl.m4  check_jpeglib.m4  check_libsndfile.m4  check_oggvorbis.m4  check_openal.m4  check_pthread.m4  check_qt.m4  check_quicktime.m4  check_tifflib.m4  check_w32api.m4  coinscenery.m4  coinutils.m4  compile_debug.m4  compile_exceptions.m4  compile_functionname.m4  compile_profiling.m4  compile_rtti.m4  compile_symbols.m4  compile_warnings.m4  compiler_capabilities.m4  configuration_summary.m4  coretext.m4  cpp_search_order.m4  cvschanges.m4  dates.m4  dime.m4  dl.m4  doxygen_detection.m4  errors.m4  exit.m4  expand_dir_vars.m4  fink.m4  (+59 more)
doc/: cl-opts.txt
patches/: autoconf-2-57.diff  autoconf-2-57.diff2  autoconf-2-57.diff3  autoconf-2-57.diff4  libtool-1-5.diff  libtool-1-5.diff2  libtool-1-5.diff3  libtool-1-5.diff4  libtool-1-5.diff5
src/: Makefile  csubst.c  wrapmsvc.cpp
